fix: admin login page cut off on small phones

--- a/src/components/AdminLogin/AdminLogin.scss
+++ b/src/components/AdminLogin/AdminLogin.scss
@@ -67,4 +67,9 @@
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.5);
   }
+
+  @media only screen and (max-width: 700px) {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
